gateway/anythingllm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anythingllm
  labels:
    name: anythingllm
    app.kubernetes.io/managed-by: weown-cli
    app.kubernetes.io/part-of: jaimsnet
